--- a/app/src/main/res/layout/item_detail_news.xml
+++ b/app/src/main/res/layout/item_detail_news.xml
@@ -9,10 +9,10 @@
     android:layout_marginRight="11dp"
     android:layout_marginBottom="7dp"
     android:background="@color/black"
+    android:backgroundTint="@color/black"
     app:cardCornerRadius="10dp"
     app:cardElevation="@dimen/cardview_default_radius"
-    app:cardPreventCornerOverlap="false"
-    tools:context=".DetailNews">
+    app:cardPreventCornerOverlap="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                 android:fontFamily="serif"
                 android:gravity="bottom"
                 android:text="Source"
-                android:layout_marginTop="170dp"
+                android:layout_marginTop="160dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:textColor="@color/white"
@@ -65,6 +65,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:text="TextView"
+            android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +73,7 @@
 
         <TextView
             android:id="@+id/Author"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -85,6 +87,7 @@
 
         <TextView
             android:id="@+id/publishedAt"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
