--- a/app/src/main/res/layout/item_detail_news.xml
+++ b/app/src/main/res/layout/item_detail_news.xml
@@ -57,7 +57,6 @@
 
         </RelativeLayout>
 
-
         <TextView
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
@@ -66,8 +65,9 @@
             android:layout_marginTop="10dp"
             android:text="TextView"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="16dp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Author" />
 
